--- a/navy-apps/Makefile
+++ b/navy-apps/Makefile
@@ -169,7 +169,7 @@ $(CLEAN_ALL):
 
 ### Build fsimg and ramdisk for Nanos-lite
 APPS =
-TESTS = dummy hello
+TESTS = dummy hello  file-test time-test
 
 fsimg: $(addprefix apps/, $(APPS)) $(addprefix tests/, $(TESTS))
 	-for t in $^; do $(MAKE) -s -C $(NAVY_HOME)/$$t install; done
@@ -183,7 +183,7 @@ $(RAMDISK): fsimg
 	@truncate -s \%512 $@
 	@echo "// file path, file size, offset in disk" > $(RAMDISK_H)
 	@wc -c $(FSIMG_FILES) | grep -v 'total$$' | sed -e 's+ ./fsimg+ +' | awk -v sum=0 '{print "\x7b\x22" $$2 "\x22\x2c " $$1 "\x2c " sum "\x7d\x2c";sum += $$1}' >> $(RAMDISK_H)
-	@cp $(RAMDISK) $(NANO_HOME)/build/ramdisk.img
+	# @cp $(RAMDISK) $(NANO_HOME)/build/ramdisk.img
 
 ramdisk: $(RAMDISK)
 
