--- a/navy-apps/Makefile
+++ b/navy-apps/Makefile
@@ -168,7 +168,7 @@ $(CLEAN_ALL):
 .PHONY: clean-all $(CLEAN_ALL)
 
 ### Build fsimg and ramdisk for Nanos-lite
-APPS =  nslider
+APPS =  nslider menu
 TESTS = dummy hello  file-test time-test  event-test bmp-test
 
 fsimg: $(addprefix apps/, $(APPS)) $(addprefix tests/, $(TESTS))
