--- a/navy-apps/Makefile
+++ b/navy-apps/Makefile
@@ -168,8 +168,8 @@ $(CLEAN_ALL):
 .PHONY: clean-all $(CLEAN_ALL)
 
 ### Build fsimg and ramdisk for Nanos-lite
-APPS =  nslider menu
-TESTS = dummy hello  file-test time-test  event-test bmp-test
+APPS =   pal
+TESTS = 
 
 fsimg: $(addprefix apps/, $(APPS)) $(addprefix tests/, $(TESTS))
 	-for t in $^; do $(MAKE) -s -C $(NAVY_HOME)/$$t install; done
