--- a/navy-apps/.gitignore
+++ b/navy-apps/.gitignore
@@ -22,3 +22,4 @@ libs/libc/
 !/fsimg/share/music/rhythm/Si.ogg
 !/fsimg/share/music/rhythm/empty.ogg
 !/fsimg/share/pictures/projectn.bmp
+!/apps/pal/repo/
