fix some exam bug

--- a/nanos-lite/Makefile
+++ b/nanos-lite/Makefile
@@ -4,10 +4,15 @@ RAMDISK_FILE = build/ramdisk.img
 NAME = nanos-lite
 SRCS = $(shell find -L ./src/ -name "*.c" -o -name "*.cpp" -o -name "*.S")
 SB_WORD_SPACE = $(shell pwd)
-NEMUFLAGS +=  -f $(SB_WORD_SPACE)/$(RAMDISK_FILE)
-NPCFLAGS += -f $(SB_WORD_SPACE)/$(RAMDISK_FILE)
+
+FSIMG_FILES_use_bin = $(shell find -L $(NAVY_HOME)/fsimg/bin -type f )
+FSIMG_FILES_use_for_nemu = $(addprefix -f , $(FSIMG_FILES_use_bin))  
+NEMUFLAGS +=  $(FSIMG_FILES_use_for_nemu)
+NPCFLAGS += $(FSIMG_FILES_use_for_nemu)
 
 include $(AM_HOME)/Makefile
+
+
 
 ifeq ($(ARCH),native)
 ISA = am_native
@@ -28,7 +33,11 @@ ifeq ($(wildcard $(NAVY_HOME)/libs/libos/src/syscall.h),)
   $(error $$NAVY_HOME must be a Navy-apps repo)
 endif
 
+
+
+
 update:
+	@echo $(FSIMG_FILES_use_for_nemu)
 	$(MAKE) -s -C $(NAVY_HOME) ISA=$(ISA) ramdisk
 	@ln -sf $(NAVY_HOME)/build/ramdisk.img $(RAMDISK_FILE)
 	@ln -sf $(NAVY_HOME)/build/ramdisk.h src/files.h
