--- a/npc/.config
+++ b/npc/.config
@@ -37,7 +37,7 @@ CONFIG_CC_OPT="-O2"
 #
 CONFIG_TRACE=y
 CONFIG_TRACE_START=0
-CONFIG_TRACE_END=10000
+CONFIG_TRACE_END=100000000
 CONFIG_ITRACE=y
 CONFIG_ITRACE_COND="true"
 CONFIG_DIFFTEST=y
